# swing

./: .clang-format  .devcontainer.json  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build_and_run_unittest.sh  fast-build.sh
.github/workflows/: test.yml
cmake/: gcc-avr.toolchain.cmake
doc/: ATMega328.pdf:Zone.Identifier  OLDSTUFF.cpp  docker_ubuntu_stuff  inbyggda_system_5hp_Final_Report.pdf:Zone.Identifier  wiki  wiki.md
doc/test_data/: accel_only.py  print.py
doc/test_data/data_set_1/: josie_i_josies.csv  josie_i_josies.csv:Zone.Identifier  josie_i_josies_gyro.csv  josie_i_patriks.csv:Zone.Identifier
doc/test_data/data_set_2/2023-05-21_09-18-51/: Accelerometer.csv  AccelerometerUncalibrated.csv  Gravity.csv  Gyroscope.csv  GyroscopeUncalibrated.csv  Magnetometer.csv  MagnetometerUncalibrated.csv  Metadata.csv  Orientation.csv  TotalAcceleration.csv
doc/test_data/data_set_2/2023-05-21_09-22-37/: Accelerometer.csv  AccelerometerUncalibrated.csv  Gravity.csv  Gyroscope.csv  GyroscopeUncalibrated.csv  Magnetometer.csv  MagnetometerUncalibrated.csv  Metadata.csv  Orientation.csv  TotalAcceleration.csv
doc/test_data/data_set_2/2023-05-21_09-26-25/: Accelerometer.csv  AccelerometerUncalibrated.csv  Gravity.csv  Gyroscope.csv  GyroscopeUncalibrated.csv  Magnetometer.csv  MagnetometerUncalibrated.csv  Metadata.csv  Orientation.csv  TotalAcceleration.csv
doc/test_data/data_set_2/Clean-2023-05-21_09-34-25/: Accelerometer.csv  AccelerometerUncalibrated.csv  Gravity.csv  Gyroscope.csv  GyroscopeUncalibrated.csv  Magnetometer.csv  MagnetometerUncalibrated.csv  Metadata.csv  Orientation.csv  TotalAcceleration.csv
doc/test_data/data_set_2/Rorelse-2023-05-21_09-29-43/: Accelerometer.csv  AccelerometerUncalibrated.csv  Gravity.csv  Gyroscope.csv  GyroscopeUncalibrated.csv  Magnetometer.csv  MagnetometerUncalibrated.csv  Metadata.csv  Orientation.csv  TotalAcceleration.csv
doc/test_data/data_set_2/Stilla-2023-05-21_16-47-53/: Accelerometer.csv  AccelerometerUncalibrated.csv  Gravity.csv  Gyroscope.csv  GyroscopeUncalibrated.csv  Magnetometer.csv  MagnetometerUncalibrated.csv  Metadata.csv  Orientation.csv  TotalAcceleration.csv
docker/: Dockerfile  README.md
external-libs/: CMakeLists.txt  lcd.c
include/: lcd.h
lib/: CMakeLists.txt  lcd.c  lcd.h
scripts/: build.sh  flash.sh
src/: AccelerometerHandler.cpp  AccelerometerHandler.h  Adxl345ConfigGetter.cpp  Adxl345ConfigGetter.h  Adxl345RegisterMap.h  CMakeLists.txt  ConfigGetter.cpp  ConfigGetter.h  EventLoop.cpp  EventLoop.h  HardwareSetup.h  IAccelerometerManager.h  IAdxl345.h  IAdxl345ConfigGetter.h  IConfigGetter.h  IEventLoop.h  IRegisterAccessor.h  IRegisterManager.h  ISpiAdapter.h  ISpiConfigGetter.h  ISpiHandler.h  IUartAdapter.h  IUartConfigGetter.h  IUartManager.h  Isomething.h  MyUsart.cpp  MyUsart.h  RegisterAccessor.cpp  RegisterAccessor.h  RegisterManager.cpp  RegisterManager.h  SpiAdapter.cpp  SpiAdapter.h  SpiHandler.cpp  SpiHandler.h  UartAdapter.cpp  UartAdapter.h  UartManager.cpp  UartManager.h  logger.h  (+5 more)
test/: CMakeLists.txt  main.cpp  test_AccelerometerHandler.cpp  test_Adxl345ConfigGetter.cpp  test_EventLoop.cpp  test_MyUsart.cpp  test_RegisterAccessor.cpp  test_RegisterManager.cpp  test_SpiAdapter.cpp  test_SpiHandler.cpp  test_UartManager.cpp  test_template.cpp
test_data/plots/data/: josie_i_josies_gForce.csv  josie_i_josies_gForce.csv:Zone.Identifier  josie_i_josies_gyro.csv:Zone.Identifier  josie_i_patriks.csv  patrik_i_payriks.csv  patrik_i_payriks.csv:Zone.Identifier
utils/simulavr/: README.md  avr-gdb.conf  start.sh  stop.sh
utils/usbipd/: README.md
